--- a/apps/quest_admin/web/templates/layout/app.html.eex
+++ b/apps/quest_admin/web/templates/layout/app.html.eex
@@ -15,8 +15,9 @@
       <div class="col-xs-6">
         <div class="circle">
           <br />
+          The
           <br />
-          Honeypot &
+          Quest
           <br />
           Admin
         </div>
@@ -24,7 +25,7 @@
 
       <div class="col-xs-6 text-right">
         <div id="header-links">
-          <a href="<%= question_path(@conn, :new) %>">New Question</a>
+          <a href="<%= question_path(@conn, :index) %>">Questions</a>
         </div>
       </div>
     </header>
